--- a/.github/workflows/update_submod.yml
+++ b/.github/workflows/update_submod.yml
@@ -8,14 +8,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: GitHub Commit
+    - name: Update submodule
+      run: |
+        git submodule update --remote ./submodule_action_sub
+    - name: Git commit
       run: |
         git config --local user.name "w-haibara"
         git config --local user.email "hwhaibarawataru@gmail.com"
         git add -A
         git status
         git commit -m "update submodule (by update_submodule.yml)"
-    - name: GitHub Push
+    - name: Git push
       uses: ad-m/github-push-action@v0.5.0
       with:
         branch: dev
