--- a/.github/workflows/update_submod.yml
+++ b/.github/workflows/update_submod.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Git push
       uses: ad-m/github-push-action@v0.5.0
       with:
-        branch: dev
+        branch: master
         github_token: ${{ secrets.GITHUB_TOKEN }}
