--- a/.github/workflows/update_submod.yml
+++ b/.github/workflows/update_submod.yml
@@ -26,3 +26,7 @@ jobs:
       with:
         branch: master
         github_token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Main process
+      run: |
+        cat ./submod_action_sub/text.txt >> main.txt
+        cat main.txt
